Fix workspace main section overflowing beyond html height

--- a/app/assets/stylesheets/components/_mytasks.scss
+++ b/app/assets/stylesheets/components/_mytasks.scss
@@ -6,7 +6,7 @@
 .mytasks-all-dnd {
     &__buff {
         // width: 100%;
-        height: 100%;
+        height: calc(100vh - 70px);
         padding: 0 20px 20 px 20px;
         margin: 20px 25px 0 20px;
         display: flex;
